[package]
name = "url_shortener_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
